assets/css/style.css
/* ... */
h3 p {
    border-radius: 0px 0px 10px 10px;
    border-bottom: solid 3px;
    border-left: solid 1px;
    border-right: solid 1px;
    background-color: var(--background-color);
    padding-left: 1%;
    padding-right: 1%;
    color: var(--contrast-color);
    border-color: var(--text-color);
}


/*Projects*/
.my-projects{
    padding: 10px;
    justify-content: space-between;
    
}



.my-projects figure {
    font-family: 'Space Mono', monospace;
    border-style: solid;
    border-width: 4px;
    color: var(--contrast-color);
    padding: 4%;
    margin: 1%;
    margin-top: 2%;
    font-size: 225%;
    display: flex;
    flex-flow: row-reverse;
    border-color: var(--layer2-color);
    border-radius: 10px;
}
/*Data Description and Hover effects for project images*/
span[data-descr] {
    position: relative;
    text-decoration: none;
    color: #000;
    cursor: pointer;
    
}
span[data-descr]:hover::after,
span[data-descr]:focus::after {
    content: attr(data-descr);
    position: relative;
    bottom: 100px;
    left: 50%;
    min-width: 200px;
    background-color: var(--background-color);
    padding: 1%;
    color: var(--contrast-color);
    border: solid 3px var(--text-color);
    border-radius: 10px;
    font-size: 115%;
    z-index: 1;
}

.my-projects *:hover {
    height: 500px;
}


.project-1 {
    background-image: url(https://picsum.photos/800/600);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 300px;
}

.project-2{
    background-image: url(https://picsum.photos/800/600);
    background-repeat: no-repeat;
    background-position: center;
    background-size:cover;
}

.project-3{
    background-image: url(https://picsum.photos/800/600);
    background-repeat: no-repeat;
    background-position: center;
    background-size:cover;
}
/* Holding this code to reference later*/
/*:target {
    height: 200px;
    color:#000;
}
*/

h4 {
    font-family: 'Roboto Mono', monospace;
    font-size: 200%;
    display: flex;
    justify-content: center;
    background-color: var(--layer1-color);
    border-radius: 0px 0px 10px 10px;
    margin-top: 0px;
}

h4 p {
    border-radius: 0px 0px 10px 10px;
    border-bottom: solid 3px;
    border-left: solid 1px;
    border-right: solid 1px;
    background-color: var(--background-color);
    padding-left: 1%;
    padding-right: 1%;
    color: var(--contrast-color);
    border-color: var(--text-color);
    margin-bottom: 2%;
}


/*Footer info*/

footer {
    display: flex;
    justify-content: center;
    padding: 0;
    background-color: var(--layer1-color);
    border-radius: 10px 10px 10px 10px;
    border-bottom: solid 3px;
    border-left: solid 2px;
    border-right: solid 2px;
    border-top: solid 1px;
    width: 100%;
}


/*Contact Me*/

.contact-me{
    background-color: var(--layer1-color);
}

.contact-me ul {
    display: inline-flex;
    justify-content: space-around;
    padding: 4%;
    padding-bottom: 0px;
    background-color: var(--layer1-color);
    font-family: 'Roboto Mono', monospace;
    font-size: 160%;
}



.contact-me ul a {
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 2%;
    padding-bottom: 2%;
    border-left: solid 1px;
    border-right: solid 1px;
    border-top: solid 3px;
    border-bottom: solid 3px;
    border-color: var(--layer2-color);
    border-radius: 10px;
    margin-right: 10%;
    text-decoration: none;
}


.contact-me ul a:hover {
    background-color: var(--layer1-color);
    color: var(--contrast-color);
    --text-color: var(--contrast-color);
    --background-color: var(--layer1-color);
}

.copyright {
    display: flex;
    justify-content: center;
    background-color: var(--layer1-color);
    margin-top: 3%;
    margin-bottom: 1%;
}



/*Media screen and smaller views settings*/

/*1000px width*/
@media screen and (max-width:1000px){
    .span {
        height: 200px;
        width: 100%;
    }
    .about-me p {
        padding-left: 1%;
        margin-left: 15%;
    }
    .profile-image {
        margin: 1%;
        margin-left: 5%;
    }

    span[data-descr]:hover::after,span[data-descr]:focus::after {
    content: attr(data-descr);
    bottom: 100px;
    left: 25%;
    }
}


/*800px width*/
@media screen and (max-width: 800px){

    body {
        margin: 0px;
        padding: 0px;
        border: solid 2px;
    }
    
    .main-content {

        padding: 1% 0% 2% 2%;
        margin: 1% 0% 2% 1%;
    }



    body, header {

        width: 100%;
        border-radius: 0px 0px 30px 0px;
        border-bottom: solid 3px;
    }
    
    .span {
        height: 280px;
        width: 100%;
    }

    body, nav {
        flex-direction: column;
        top: 65px;
    }

    
    body, nav, li * {
        padding-top: 2%;
        padding-bottom: 2%;
        padding-right: 0%;
    }
    
    nav {
        padding-left: 0%;
        padding-right: 2%;
    }

    nav a li {
        width: 100%;
        border-radius: 0px 10px 10px 0px;
        border-left: 0;
        border-bottom: solid 2px;
        border-top: solid 2px;
        border-right: solid 1px;
        border-color: var(--layer2-color);
    }
    .about-me p {
        margin-left: 15%;
    }
    .profile-image {
        height: 175px;
        border: 3px solid var(--text-color);
        border-radius: 100%;
        background-color: var(--layer2-color);
        margin: 1%;
        margin-left: 10%;
    }

    h2 {
        padding-bottom: 1%;
    }

    h3 {
        padding-bottom: 1%;
    }

    .contact-me ul li * {
        font-size: 70%;
    }


}
/* ... */

